--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body{
     margin: 0;
-    background: pink;
+    background: rgb(45, 5, 62);
     text-align: center;
 }
 
 .logoImg{
     width: 300px;
-    
+
 }
