--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,21 @@ body{
     width: 500px;
 
 }
+
+#nav ul li a.active {
+    background-color: white;
+    box-shadow: none;
+}
+
+#nav ul li a {
+    transition: font-size 0.2s ease;
+    display: inline-block;
+    height: 2.25em;
+    line-height: 2.25em;
+    padding: 0 1.25em;
+    border: 0;
+    border-radius: 8px;
+    box-shadow: inset 0 0 0 1px transparent;
+}
+
+
