--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 header.h1{
     font-size: 3.25em;
     color:white;
+    background: none;
     line-height: 1.2;
     letter-spacing: -0.025em;
 }
@@ -11,7 +12,7 @@ header.h1{
 
 body{
     margin: 0;
-    background: rgb(186, 178, 189);
+    background: rgb(79, 39, 94);
     text-align: center;
 
 }
@@ -21,10 +22,7 @@ body.h1{
     background: none;
 }
 
-.name{
-    color:white;
-    
-}
+
 
 .logoImg{
     width: 500px;
